--- a/src/pages/artists/[artist].astro
+++ b/src/pages/artists/[artist].astro
@@ -39,13 +39,23 @@ const socialLinks: { key: LinkKey; icon: string; alt: string }[] = [
           ))}
         </div>
       )}
-      {artist.trackEmbed && (
-        <div class="artist-player">
-          <iframe width="100%" height="180" style="border:0;overflow:hidden" allow="autoplay"
-            src={`https://w.soundcloud.com/player/?url=${encodeURIComponent(artist.trackEmbed)}&visual=false&show_teaser=false&hide_related=true&color=%2357d6ff`}>
-          </iframe>
-        </div>
-      )}
+{artist.trackEmbed && (
+  <div
+    class="artist-player artist-player-soundcloud soundcloud-frame"
+    style={`--sc-bg: url(${imgSrc});`}
+  >
+    <div class="soundcloud-embed">
+      <iframe
+        width="100%"
+        height="180"
+        scrolling="no"
+        frameborder="no"
+        allow="autoplay"
+        src={`https://w.soundcloud.com/player/?url=${encodeURIComponent(artist.trackEmbed)}&color=%23101416&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=false`}>
+      </iframe>
+    </div>
+  </div>
+)}
     </div>
   </section>
 </PageLayout>
