--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -96,6 +96,7 @@ const pages = [
   .header-left {
     grid-column: 1;
     grid-row: 1;
+    align-self: center;
   }
 
   .header-logo {
@@ -103,6 +104,7 @@ const pages = [
     grid-row: 1;
     display: block;
     justify-self: center;
+    align-self: center;
   }
 
   .header-logo img {
@@ -122,6 +124,7 @@ const pages = [
     grid-column: 3;
     grid-row: 1;
     justify-self: end;
+    align-self: center;
     display: flex;
     align-items: center;
     justify-content: center;
