--- a/src/scss/components/_releases.scss
+++ b/src/scss/components/_releases.scss
@@ -8,7 +8,7 @@
 // Releases page
 .releases-page {
   text-align: center;
-  padding: map.get($spacing, 'xl') map.get($spacing, 'lg') map.get($spacing, '2xl');
+  padding: map.get($spacing, 'xl') 0 map.get($spacing, '2xl');
 
   h1 {
     font-size: map.get($font-sizes, '3xl');
@@ -19,14 +19,16 @@
     max-width: map.get($breakpoints, 'xl');
     margin-left: auto;
     margin-right: auto;
+    padding: 0 map.get($spacing, 'lg');
   }
 
   @include respond-to('md') {
-    padding: map.get($spacing, 'lg') 12px map.get($spacing, 'xl');
+    padding: map.get($spacing, 'lg') 0 map.get($spacing, 'xl');
 
     h1 {
       font-size: 1.6rem;
       margin-bottom: 32px;
+      padding: 0 12px;
     }
   }
 }
@@ -43,7 +45,7 @@
   @include respond-to('md') {
     width: 100%;
     margin: 0;
-    padding: 0 map.get($spacing, 'sm');
+    padding: 0;
     overflow-x: hidden;
   }
 }
