--- a/src/components/ui/FloatingSocialBar.astro
+++ b/src/components/ui/FloatingSocialBar.astro
@@ -24,4 +24,13 @@
   >
     <img src="/images/icons/soundcloud.svg" alt="SoundCloud" width="28" height="28" />
   </a>
+  <a
+    href="https://beatport.comzmusic"
+    target="_blank"
+    rel="noopener noreferrer"
+    class="floating-social-icon"
+    aria-label="Beatport"
+  >
+    <img src="/images/icons/beatport.svg" alt="Beatport" width="28" height="28" />
+  </a>
 </div>
