--- a/src/scss/components/_collapsible.scss
+++ b/src/scss/components/_collapsible.scss
@@ -19,21 +19,24 @@
     align-items: center;
     gap: map.get($spacing, 'lg');
     padding: map.get($spacing, 'md') 0;
+    padding-left: 30px;
     padding-right: map.get($spacing, 'lg');
     width: 100%;
     text-decoration: none;
     transition: background $transition-fast;
 
     @include respond-to('md') {
-      grid-template-columns: 50px 60px 1fr 32px;
+      // grid-template-columns: 50px 60px 1fr 32px;
       gap: map.get($spacing, 'md');
       padding: map.get($spacing, 'sm') 0;
+      padding-left: 20px;
       padding-right: map.get($spacing, 'md');
     }
 
     @include respond-to('sm') {
-      grid-template-columns: 40px 50px 1fr 24px;
+      // grid-template-columns: 40px 50px 1fr 24px;
       gap: map.get($spacing, 'sm');
+      padding-left: 16px;
     }
   }
 
@@ -48,8 +51,7 @@
   font-weight: 600;
   letter-spacing: 1px;
   text-align: center;
-  margin-left: 30px;
-  margin-right: 10px;
+
   @include respond-to('md') {
     font-size: map.get($font-sizes, 'xs');
   }
@@ -131,6 +133,7 @@
 .release-expanded-content {
   padding: map.get($spacing, 'xl') map.get($spacing, 'lg');
   padding-top: map.get($spacing, 'lg');
+  padding-left: 130px; // Align with trigger: 30px padding + 100px index column
   background: linear-gradient(
     180deg,
     rgba(87, 214, 255, 0.02) 0%,
@@ -139,6 +142,11 @@
 
   @include respond-to('md') {
     padding: map.get($spacing, 'lg') map.get($spacing, 'md');
+  //  padding-left: 10px; // Match trigger padding + smaller index column (16px + 50px)
+  }
+
+  @include respond-to('sm') {
+  //  padding-left: 0px; // Same as right padding on mobile
   }
 }
 
