--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -86,8 +86,8 @@
   text-align: center;
   color: var(--muted);
   font-size: map.get($font-sizes, 'sm');
-  margin-left: 30px;
-  margin-right: 10px;
+  margin-left: 15px;
+//  margin-right: 10px;
 }
 
 .release-thumb {
